[package]
name = "hq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.5"
lol_html = { git = "https://github.com/cloudflare/lol-html/" }
minijinja = { version = "0.8.2", features = ["json"] }
regex = "1.5.4"
serde = "1.0.130"
